--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 
 <section id="telefone">
 
-<iframe src="C:\Users\Administrador\Desktop\ESTUDOS\projeto-social\home.html" name="tela" id="tela" frameborder="0"></iframe>
+<iframe src="C:\Users\Administrador\Desktop\ESTUDOS\projeto-social\home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso.</iframe>
 
 </section>
 
 <section id="redes-sociais">
 
+  <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="Home"></a><br>
+  <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+  <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+  <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+  <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+  <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
 
 
 </section>
