--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <section id="telefone">
 
-<iframe src="C:\Users\Administrador\Desktop\ESTUDOS\projeto-social\home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso.</iframe>
+<iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso.</iframe>
 
 </section>
 
